src/pmt/parserbuilder/grm_lexer.cpp

#line 1 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
#include "pmt/parserbuilder/grm_lexer.hpp"

#include "pmt/parserbuilder/grm_ast.hpp"

#define MAKE_RL_CONTEXT_AVAILABLE \
  char const *&p = _p;            \
  char const *&pe = _pe;          \
  char const *&eof = _eof;        \
  char const *&ts = _ts;          \
  char const *&te = _te;          \
  int &act = _act;                \
  int &cs = _cs;

#define ACCEPT_TOKEN(id)                                           \
  do {                                                             \
    accepted = GenericAst::construct(GenericAst::Tag::String, id); \
  } while (0)

#line 229 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"

namespace {

#line 24 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
static const int GrmLexer_start = 68;
static const int GrmLexer_first_final = 68;
static const int GrmLexer_error = -1;

static const int GrmLexer_en_main = 68;

#line 234 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"

}  // namespace

namespace pmt::parserbuilder {
using namespace pmt::util::smrt;

GrmLexer::GrmLexer(std::string_view input_)
 : _p{input_.data()}
 , _pe{_p + input_.size()}
 , _eof{_pe}
 , _ts{nullptr}
 , _te{nullptr}
 , _act{0}
 , _cs{0} {
  MAKE_RL_CONTEXT_AVAILABLE;

#line 47 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
  {
    cs = GrmLexer_start;
    ts = 0;
    te = 0;
    act = 0;
  }

#line 252 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
}

auto GrmLexer::next_token() -> GenericAst::UniqueHandle {
  MAKE_RL_CONTEXT_AVAILABLE;

  GenericAst::UniqueHandle accepted;

#line 60 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
  {
    if (p == pe)
      goto _test_eof;
    switch (cs) {
    tr0 :
#line 227 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      { p = ((te)) - 1; }
      { throw std::runtime_error("lexer error"); }
    }
      goto st68;
    tr2 :
#line 59 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ++ts;
        --te;
        ACCEPT_TOKEN(GrmAst::TkStringLiteral);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr7 :
#line 224 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
    }
      goto st68;
    tr24 :
#line 216 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ++ts;
        ACCEPT_TOKEN(GrmAst::TkGrammarPropertyCaseSensitive);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr29 :
#line 210 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ++ts;
        ACCEPT_TOKEN(GrmAst::TkGrammarPropertyComment);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr33 :
#line 198 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ++ts;
        ACCEPT_TOKEN(GrmAst::TkGrammarPropertyStart);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr42 :
#line 204 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ++ts;
        ACCEPT_TOKEN(GrmAst::TkGrammarPropertyWhitespace);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr54 :
#line 193 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkKwParameterCaseSensitive);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr59 :
#line 88 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkEpsilon);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr62 :
#line 71 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkBooleanLiteral);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr64 :
#line 178 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkKwParameterHide);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr67 :
#line 183 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkKwParameterMerge);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr71 :
#line 173 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkKwParameterUnpack);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr72 :
#line 227 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      { throw std::runtime_error("lexer error"); }
    }
      goto st68;
    tr73 :
#line 222 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
    }
      goto st68;
    tr77 :
#line 118 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkOpenParen);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr78 :
#line 123 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkCloseParen);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr79 :
#line 163 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkStar);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr80 :
#line 158 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkPlus);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr81 :
#line 108 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkComma);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr85 :
#line 98 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkSemiColon);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr86 :
#line 148 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkOpenAngle);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr87 :
#line 103 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkEquals);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr88 :
#line 153 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkCloseAngle);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr89 :
#line 168 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkQuestion);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr91 :
#line 138 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkOpenSquare);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr92 :
#line 143 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkCloseSquare);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr101 :
#line 128 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkOpenBrace);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr102 :
#line 93 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkPipe);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr103 :
#line 133 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkCloseBrace);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr104 :
#line 227 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p;
      p--;
      { throw std::runtime_error("lexer error"); }
    }
      goto st68;
    tr106 :
#line 76 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p;
      p--;
      {
        ++ts;
        ACCEPT_TOKEN(GrmAst::TkTerminalIdentifier);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr108 :
#line 82 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p;
      p--;
      {
        ++ts;
        ACCEPT_TOKEN(GrmAst::TkRuleIdentifier);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr109 :
#line 113 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkDoubleDot);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr111 :
#line 223 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p;
      p--;
    }
      goto st68;
    tr112 :
#line 66 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p;
      p--;
      {
        ACCEPT_TOKEN(GrmAst::TkIntegerLiteral);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    tr120 :
#line 188 "/home/pmt/repos/pmt/grammars/grm_lexer.rl"
    {
      te = p + 1;
      {
        ACCEPT_TOKEN(GrmAst::TkKwParameterId);
        {
          p++;
          cs = 68;
          goto _out;
        }
      }
    }
      goto st68;
    st68 :
#line 1 "NONE"
    {
      ts = 0;
    }
      if (++p == pe)
        goto _test_eof68;
      case 68:
#line 1 "NONE"
      {
        ts = p;
      }
#line 283 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        switch ((*p)) {
          case 32:
            goto tr73;
          case 34:
            goto tr74;
          case 36:
            goto tr75;
          case 37:
            goto tr76;
          case 40:
            goto tr77;
          case 41:
            goto tr78;
          case 42:
            goto tr79;
          case 43:
            goto tr80;
          case 44:
            goto tr81;
          case 46:
            goto st74;
          case 47:
            goto tr83;
          case 59:
            goto tr85;
          case 60:
            goto tr86;
          case 61:
            goto tr87;
          case 62:
            goto tr88;
          case 63:
            goto tr89;
          case 64:
            goto tr90;
          case 91:
            goto tr91;
          case 93:
            goto tr92;
          case 99:
            goto tr93;
          case 101:
            goto tr94;
          case 102:
            goto tr95;
          case 104:
            goto tr96;
          case 105:
            goto st84;
          case 109:
            goto tr98;
          case 116:
            goto tr99;
          case 117:
            goto tr100;
          case 123:
            goto tr101;
          case 124:
            goto tr102;
          case 125:
            goto tr103;
        }
        if ((*p) > 13) {
          if (48 <= (*p) && (*p) <= 57)
            goto tr84;
        } else if ((*p) >= 9)
          goto tr73;
        goto tr72;
      tr74 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st69;
      st69:
        if (++p == pe)
          goto _test_eof69;
      case 69:
#line 328 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        if ((*p) == 34)
          goto tr2;
        if ((*p) > 38) {
          if (40 <= (*p) && (*p) <= 126)
            goto st0;
        } else if ((*p) >= 32)
          goto st0;
        goto tr104;
      st0:
        if (++p == pe)
          goto _test_eof0;
      case 0:
        if ((*p) == 34)
          goto tr2;
        if ((*p) > 38) {
          if (40 <= (*p) && (*p) <= 126)
            goto st0;
        } else if ((*p) >= 32)
          goto st0;
        goto tr0;
      tr75 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st70;
      st70:
        if (++p == pe)
          goto _test_eof70;
      case 70:
#line 355 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        if ((*p) == 95)
          goto st1;
        if ((*p) > 90) {
          if (97 <= (*p) && (*p) <= 122)
            goto st1;
        } else if ((*p) >= 65)
          goto st1;
        goto tr104;
      st1:
        if (++p == pe)
          goto _test_eof1;
      case 1:
        if ((*p) == 95)
          goto st71;
        if ((*p) < 65) {
          if (48 <= (*p) && (*p) <= 57)
            goto st71;
        } else if ((*p) > 90) {
          if (97 <= (*p) && (*p) <= 122)
            goto st71;
        } else
          goto st71;
        goto tr0;
      st71:
        if (++p == pe)
          goto _test_eof71;
      case 71:
        if ((*p) == 95)
          goto st71;
        if ((*p) < 65) {
          if (48 <= (*p) && (*p) <= 57)
            goto st71;
        } else if ((*p) > 90) {
          if (97 <= (*p) && (*p) <= 122)
            goto st71;
        } else
          goto st71;
        goto tr106;
      tr76 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st72;
      st72:
        if (++p == pe)
          goto _test_eof72;
      case 72:
#line 400 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        if ((*p) == 95)
          goto st2;
        if ((*p) > 90) {
          if (97 <= (*p) && (*p) <= 122)
            goto st2;
        } else if ((*p) >= 65)
          goto st2;
        goto tr104;
      st2:
        if (++p == pe)
          goto _test_eof2;
      case 2:
        if ((*p) == 95)
          goto st73;
        if ((*p) < 65) {
          if (48 <= (*p) && (*p) <= 57)
            goto st73;
        } else if ((*p) > 90) {
          if (97 <= (*p) && (*p) <= 122)
            goto st73;
        } else
          goto st73;
        goto tr0;
      st73:
        if (++p == pe)
          goto _test_eof73;
      case 73:
        if ((*p) == 95)
          goto st73;
        if ((*p) < 65) {
          if (48 <= (*p) && (*p) <= 57)
            goto st73;
        } else if ((*p) > 90) {
          if (97 <= (*p) && (*p) <= 122)
            goto st73;
        } else
          goto st73;
        goto tr108;
      st74:
        if (++p == pe)
          goto _test_eof74;
      case 74:
        if ((*p) == 46)
          goto tr109;
        goto tr104;
      tr83 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st75;
      st75:
        if (++p == pe)
          goto _test_eof75;
      case 75:
#line 452 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        switch ((*p)) {
          case 42:
            goto st3;
          case 47:
            goto st76;
        }
        goto tr104;
      st3:
        if (++p == pe)
          goto _test_eof3;
      case 3:
        if ((*p) == 42)
          goto st4;
        goto st3;
      st4:
        if (++p == pe)
          goto _test_eof4;
      case 4:
        if ((*p) == 47)
          goto tr7;
        goto st3;
      st76:
        if (++p == pe)
          goto _test_eof76;
      case 76:
        if ((*p) == 10)
          goto tr111;
        goto st76;
      tr84 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st77;
      st77:
        if (++p == pe)
          goto _test_eof77;
      case 77:
#line 485 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        if ((*p) == 35)
          goto st5;
        if (48 <= (*p) && (*p) <= 57)
          goto st6;
        goto tr104;
      st5:
        if (++p == pe)
          goto _test_eof5;
      case 5:
        if ((*p) < 65) {
          if (48 <= (*p) && (*p) <= 57)
            goto st78;
        } else if ((*p) > 90) {
          if (97 <= (*p) && (*p) <= 122)
            goto st78;
        } else
          goto st78;
        goto tr0;
      st78:
        if (++p == pe)
          goto _test_eof78;
      case 78:
        if ((*p) < 65) {
          if (48 <= (*p) && (*p) <= 57)
            goto st78;
        } else if ((*p) > 90) {
          if (97 <= (*p) && (*p) <= 122)
            goto st78;
        } else
          goto st78;
        goto tr112;
      st6:
        if (++p == pe)
          goto _test_eof6;
      case 6:
        if ((*p) == 35)
          goto st5;
        if (48 <= (*p) && (*p) <= 57)
          goto st6;
        goto tr0;
      tr90 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st79;
      st79:
        if (++p == pe)
          goto _test_eof79;
      case 79:
#line 532 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        switch ((*p)) {
          case 99:
            goto st7;
          case 115:
            goto st25;
          case 119:
            goto st29;
        }
        goto tr104;
      st7:
        if (++p == pe)
          goto _test_eof7;
      case 7:
        switch ((*p)) {
          case 97:
            goto st8;
          case 111:
            goto st20;
        }
        goto tr0;
      st8:
        if (++p == pe)
          goto _test_eof8;
      case 8:
        if ((*p) == 115)
          goto st9;
        goto tr0;
      st9:
        if (++p == pe)
          goto _test_eof9;
      case 9:
        if ((*p) == 101)
          goto st10;
        goto tr0;
      st10:
        if (++p == pe)
          goto _test_eof10;
      case 10:
        if ((*p) == 95)
          goto st11;
        goto tr0;
      st11:
        if (++p == pe)
          goto _test_eof11;
      case 11:
        if ((*p) == 115)
          goto st12;
        goto tr0;
      st12:
        if (++p == pe)
          goto _test_eof12;
      case 12:
        if ((*p) == 101)
          goto st13;
        goto tr0;
      st13:
        if (++p == pe)
          goto _test_eof13;
      case 13:
        if ((*p) == 110)
          goto st14;
        goto tr0;
      st14:
        if (++p == pe)
          goto _test_eof14;
      case 14:
        if ((*p) == 115)
          goto st15;
        goto tr0;
      st15:
        if (++p == pe)
          goto _test_eof15;
      case 15:
        if ((*p) == 105)
          goto st16;
        goto tr0;
      st16:
        if (++p == pe)
          goto _test_eof16;
      case 16:
        if ((*p) == 116)
          goto st17;
        goto tr0;
      st17:
        if (++p == pe)
          goto _test_eof17;
      case 17:
        if ((*p) == 105)
          goto st18;
        goto tr0;
      st18:
        if (++p == pe)
          goto _test_eof18;
      case 18:
        if ((*p) == 118)
          goto st19;
        goto tr0;
      st19:
        if (++p == pe)
          goto _test_eof19;
      case 19:
        if ((*p) == 101)
          goto tr24;
        goto tr0;
      st20:
        if (++p == pe)
          goto _test_eof20;
      case 20:
        if ((*p) == 109)
          goto st21;
        goto tr0;
      st21:
        if (++p == pe)
          goto _test_eof21;
      case 21:
        if ((*p) == 109)
          goto st22;
        goto tr0;
      st22:
        if (++p == pe)
          goto _test_eof22;
      case 22:
        if ((*p) == 101)
          goto st23;
        goto tr0;
      st23:
        if (++p == pe)
          goto _test_eof23;
      case 23:
        if ((*p) == 110)
          goto st24;
        goto tr0;
      st24:
        if (++p == pe)
          goto _test_eof24;
      case 24:
        if ((*p) == 116)
          goto tr29;
        goto tr0;
      st25:
        if (++p == pe)
          goto _test_eof25;
      case 25:
        if ((*p) == 116)
          goto st26;
        goto tr0;
      st26:
        if (++p == pe)
          goto _test_eof26;
      case 26:
        if ((*p) == 97)
          goto st27;
        goto tr0;
      st27:
        if (++p == pe)
          goto _test_eof27;
      case 27:
        if ((*p) == 114)
          goto st28;
        goto tr0;
      st28:
        if (++p == pe)
          goto _test_eof28;
      case 28:
        if ((*p) == 116)
          goto tr33;
        goto tr0;
      st29:
        if (++p == pe)
          goto _test_eof29;
      case 29:
        if ((*p) == 104)
          goto st30;
        goto tr0;
      st30:
        if (++p == pe)
          goto _test_eof30;
      case 30:
        if ((*p) == 105)
          goto st31;
        goto tr0;
      st31:
        if (++p == pe)
          goto _test_eof31;
      case 31:
        if ((*p) == 116)
          goto st32;
        goto tr0;
      st32:
        if (++p == pe)
          goto _test_eof32;
      case 32:
        if ((*p) == 101)
          goto st33;
        goto tr0;
      st33:
        if (++p == pe)
          goto _test_eof33;
      case 33:
        if ((*p) == 115)
          goto st34;
        goto tr0;
      st34:
        if (++p == pe)
          goto _test_eof34;
      case 34:
        if ((*p) == 112)
          goto st35;
        goto tr0;
      st35:
        if (++p == pe)
          goto _test_eof35;
      case 35:
        if ((*p) == 97)
          goto st36;
        goto tr0;
      st36:
        if (++p == pe)
          goto _test_eof36;
      case 36:
        if ((*p) == 99)
          goto st37;
        goto tr0;
      st37:
        if (++p == pe)
          goto _test_eof37;
      case 37:
        if ((*p) == 101)
          goto tr42;
        goto tr0;
      tr93 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st80;
      st80:
        if (++p == pe)
          goto _test_eof80;
      case 80:
#line 764 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        if ((*p) == 97)
          goto st38;
        goto tr104;
      st38:
        if (++p == pe)
          goto _test_eof38;
      case 38:
        if ((*p) == 115)
          goto st39;
        goto tr0;
      st39:
        if (++p == pe)
          goto _test_eof39;
      case 39:
        if ((*p) == 101)
          goto st40;
        goto tr0;
      st40:
        if (++p == pe)
          goto _test_eof40;
      case 40:
        if ((*p) == 95)
          goto st41;
        goto tr0;
      st41:
        if (++p == pe)
          goto _test_eof41;
      case 41:
        if ((*p) == 115)
          goto st42;
        goto tr0;
      st42:
        if (++p == pe)
          goto _test_eof42;
      case 42:
        if ((*p) == 101)
          goto st43;
        goto tr0;
      st43:
        if (++p == pe)
          goto _test_eof43;
      case 43:
        if ((*p) == 110)
          goto st44;
        goto tr0;
      st44:
        if (++p == pe)
          goto _test_eof44;
      case 44:
        if ((*p) == 115)
          goto st45;
        goto tr0;
      st45:
        if (++p == pe)
          goto _test_eof45;
      case 45:
        if ((*p) == 105)
          goto st46;
        goto tr0;
      st46:
        if (++p == pe)
          goto _test_eof46;
      case 46:
        if ((*p) == 116)
          goto st47;
        goto tr0;
      st47:
        if (++p == pe)
          goto _test_eof47;
      case 47:
        if ((*p) == 105)
          goto st48;
        goto tr0;
      st48:
        if (++p == pe)
          goto _test_eof48;
      case 48:
        if ((*p) == 118)
          goto st49;
        goto tr0;
      st49:
        if (++p == pe)
          goto _test_eof49;
      case 49:
        if ((*p) == 101)
          goto tr54;
        goto tr0;
      tr94 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st81;
      st81:
        if (++p == pe)
          goto _test_eof81;
      case 81:
#line 858 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        if ((*p) == 112)
          goto st50;
        goto tr104;
      st50:
        if (++p == pe)
          goto _test_eof50;
      case 50:
        if ((*p) == 115)
          goto st51;
        goto tr0;
      st51:
        if (++p == pe)
          goto _test_eof51;
      case 51:
        if ((*p) == 105)
          goto st52;
        goto tr0;
      st52:
        if (++p == pe)
          goto _test_eof52;
      case 52:
        if ((*p) == 108)
          goto st53;
        goto tr0;
      st53:
        if (++p == pe)
          goto _test_eof53;
      case 53:
        if ((*p) == 111)
          goto st54;
        goto tr0;
      st54:
        if (++p == pe)
          goto _test_eof54;
      case 54:
        if ((*p) == 110)
          goto tr59;
        goto tr0;
      tr95 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st82;
      st82:
        if (++p == pe)
          goto _test_eof82;
      case 82:
#line 903 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        if ((*p) == 97)
          goto st55;
        goto tr104;
      st55:
        if (++p == pe)
          goto _test_eof55;
      case 55:
        if ((*p) == 108)
          goto st56;
        goto tr0;
      st56:
        if (++p == pe)
          goto _test_eof56;
      case 56:
        if ((*p) == 115)
          goto st57;
        goto tr0;
      st57:
        if (++p == pe)
          goto _test_eof57;
      case 57:
        if ((*p) == 101)
          goto tr62;
        goto tr0;
      tr96 :
#line 1 "NONE"
      {
        te = p + 1;
      }
        goto st83;
      st83:
        if (++p == pe)
          goto _test_eof83;
      case 83:
#line 934 "/home/pmt/repos/pmt/src/pmt/parserbuilder/grm_lexer.cpp"
        if ((*p) == 105)
          goto st58;
        goto tr104;
      st58:
        if (++p == pe)
          goto _test_eof58;
      case 58:
        if ((*p) == 100)
          goto st59;
        goto tr0;
      st59:
